--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:aMh1vGMDBIyHZdzXkAZZMI6EvwJAf9Zj/jleqTD0zL8=
+APP_KEY=base64:G9NJRXm4ntnIfnBpZKokImO0Br2hwN/ND4AUm20q0As=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://realestate.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=realestate
-DB_USERNAME=root
-DB_PASSWORD=Root_2024
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
