--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="Remax"
 APP_ENV=local
-APP_KEY=base64:G9NJRXm4ntnIfnBpZKokImO0Br2hwN/ND4AUm20q0As=
+APP_KEY=base64:8EVXJ9dXopaQHdFj04KOugT1PrtSDZ3A+DrwTFBm6Gs=
 APP_DEBUG=true
-APP_URL=http://realestate.test
+APP_URL=http://remax.test
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=remax
+DB_USERNAME=root
+DB_PASSWORD=Root_2024
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
