--- a/.env
+++ b/.env
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=fsd13.ca
 DB_PORT=3306
-DB_DATABASE=remax
-DB_USERNAME=root
-DB_PASSWORD=Root_2024
+DB_DATABASE=cp5114_team3
+DB_USERNAME=cp5114_team3
+DB_PASSWORD=vOMw$D1PW]]N
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
