--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Remax"
 APP_ENV=local
 APP_KEY=base64:8EVXJ9dXopaQHdFj04KOugT1PrtSDZ3A+DrwTFBm6Gs=
 APP_DEBUG=true
-APP_URL=http://remax.test
+APP_URL=http://team3.fsd13.ca/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
