--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME="Remax"
+APP_NAME="DuProprio Clone"
 APP_ENV=local
 APP_KEY=base64:8EVXJ9dXopaQHdFj04KOugT1PrtSDZ3A+DrwTFBm6Gs=
 APP_DEBUG=true
-APP_URL=http://remax.test
+APP_URL=https://team3.fsd13.ca/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
